adjusted content layout

--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="navigation">
+  <div class="navigation" id="homepage">
     <div class="logo">
       <img src="logo.png" height="75" width="auto">
     </div>
@@ -19,7 +19,7 @@
       <li><a href="#contactme">Contact</a></li>
     </ul>
   </div>
-  <div class="intro" id="homepage">
+  <div class="intro" >
     <img src="profile.png" height="500" width="auto">
     <div class="introdescription">
       Hi, I'm Christine!
