--- a/main.html
+++ b/main.html
@@ -70,8 +70,9 @@
       <img src="https://images.unsplash.com/photo-1744294724362-3f5c404c771a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8fA%3D%3D">
       <p class="projectdesc">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
       <div class="buttons">
-        <button class="left">Website</button>
-        <button class="right">Github</button>
+        <button class="left">
+          <a href="https://www.figma.com/design/EddnQfzcW1mKfXyHKYlK4r/BVU-EDU-PLAN?node-id=0-1&t=6OpqjNbCuaYm3Gq6-1">Figma</a></button>
+        <button class="right">Website</button><!--Addlink here-->
       </div>
     </div>
     <hr class = "projectdiv2">
@@ -80,8 +81,10 @@
       <img src="https://images.unsplash.com/photo-1744294724362-3f5c404c771a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8fA%3D%3D">
       <p class="projectdesc">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
       <div class="buttons">
-          <button class="left">Figma</button>
-          <button class="right">Prototype</button>
+          <button class="left">
+            <a href="https://www.figma.com/design/EFC8vg9lWSfV9cLzvnivvC/P3-Prototype?node-id=0-1&t=zbZCqTomTyQmoze7-1">Figma</a></button>
+          <button class="right">
+            <a href="https://www.figma.com/proto/EFC8vg9lWSfV9cLzvnivvC/P3-Prototype?page-id=0%3A1&node-id=1-11&p=f&viewport=46%2C-176%2C0.54&t=pEIn6Htaf6O8lVje-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A11">Prototype</a></button>
       </div>
     </div>
     <hr class ="projectdiv2">
@@ -90,8 +93,10 @@
       <img src="https://images.unsplash.com/photo-1744294724362-3f5c404c771a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8fA%3D%3D">
       <p class="projectdesc">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
       <div class="buttons">
-        <button class="left">Figma</button>
-        <button class="right">Prototype</button>
+        <button class="left">
+          <a href="https://www.figma.com/design/4ZAIk1gCx0jk9h6KQdzI74/design-practice?node-id=0-1&t=aXNJ8Jr4SEGMpcWE-1">Figma</a></button>
+        <button class="right">
+          <a href="https://www.figma.com/proto/4ZAIk1gCx0jk9h6KQdzI74/design-practice?page-id=0%3A1&node-id=2-4&p=f&viewport=321%2C116%2C0.33&t=zysCKvrdjuzX30eO-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=2%3A4">Prototype</a></button>
       </div>
     </div>
   </div>
