created footer with some links

--- a/main.html
+++ b/main.html
@@ -101,8 +101,19 @@
     </div>
   </div>
   <div class="contact" id="contactme">
-    <p>Have a question or just want to say hi? Contact me here.</p>
-    <p>@Created and built by Christine Nguyen</p>
+    <h2 id="contactheader">Have a question or just want to say hi? </h2>
+    <h2 id="contactheader">Contact me here. I would love to hear from you!</h2>
+    <div class="photos">
+      <img src="mail.png" height="75" width="auto">
+      <img src="resume.png" height="75" width="auto">
+      <a href="https://www.linkedin.com/in/christinne-nguyenn/">
+        <img src="linkedin.png" height="75" width="auto">
+      </a>
+      <a href ="https://github.com/christinne-n">
+        <img src="github.png" height="75" width="auto">
+      </a>
+    </div>
+    <h5>@Created and built by Christine Nguyen</h5>
   </div>
   <script>
     const hamburger = document.getElementById('hamburger');
