finalizing layout of website and fixing overflow

--- a/main.html
+++ b/main.html
@@ -19,11 +19,11 @@
       <li><a href="#contactme">Contact</a></li>
     </ul>
   </div>
-  <div class="intro" >
-    <img src="profile.png" height="500" width="auto">
+  <div class="intro">
+    <img src="profile.png" class="profile-pic">
     <div class="introdescription">
       Hi, I'm Christine!
-      <img src="loading.png" height="150" width="auto">
+      <img src="loading.png" class="loading-bar">
     </div>
   </div>
   <hr class = "divider">
@@ -69,7 +69,7 @@
       <h2>BVU EDU Website</h2>
       <img src="https://images.unsplash.com/photo-1744294724362-3f5c404c771a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8fA%3D%3D">
       <p class="projectdesc">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-      <div class="buttons">
+      <div class="buttons"><!--change description-->
         <button class="left">
           <a href="https://www.figma.com/design/EddnQfzcW1mKfXyHKYlK4r/BVU-EDU-PLAN?node-id=0-1&t=6OpqjNbCuaYm3Gq6-1">Figma</a></button>
         <button class="right">Website</button><!--Addlink here-->
@@ -80,7 +80,7 @@
       <h2>Discord Figma Redesign</h2>
       <img src="https://images.unsplash.com/photo-1744294724362-3f5c404c771a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8fA%3D%3D">
       <p class="projectdesc">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-      <div class="buttons">
+      <div class="buttons"><!--change description-->
           <button class="left">
             <a href="https://www.figma.com/design/EFC8vg9lWSfV9cLzvnivvC/P3-Prototype?node-id=0-1&t=zbZCqTomTyQmoze7-1">Figma</a></button>
           <button class="right">
@@ -92,7 +92,7 @@
       <h2>Sephora Figma Redesign & Prototype</h2>
       <img src="https://images.unsplash.com/photo-1744294724362-3f5c404c771a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8fA%3D%3D">
       <p class="projectdesc">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-      <div class="buttons">
+      <div class="buttons"><!--change description-->
         <button class="left">
           <a href="https://www.figma.com/design/4ZAIk1gCx0jk9h6KQdzI74/design-practice?node-id=0-1&t=aXNJ8Jr4SEGMpcWE-1">Figma</a></button>
         <button class="right">
@@ -104,7 +104,9 @@
     <h2 id="contactheader">Have a question or just want to say hi? </h2>
     <h2 id="contactheader">Contact me here. I would love to hear from you!</h2>
     <div class="photos">
-      <img src="mail.png" height="75" width="auto">
+      <a href="mailto:christine.nguyen0909@gmail.com">
+        <img src="mail.png" height="75" width="auto">
+      </a><!--add resume pdf-->
       <img src="resume.png" height="75" width="auto">
       <a href="https://www.linkedin.com/in/christinne-nguyenn/">
         <img src="linkedin.png" height="75" width="auto">
