edited project section

--- a/main.html
+++ b/main.html
@@ -78,9 +78,16 @@
     <hr class = "projectdiv2">
     <div class="project2">
       <h2>Discord Figma Redesign</h2>
-      <img src="https://images.unsplash.com/photo-1744294724362-3f5c404c771a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8fA%3D%3D">
-      <p class="projectdesc">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-      <div class="buttons"><!--change description-->
+      <img src="discord.png" height = "550px" width = "auto">
+      <p class="projectdesc">
+        For my Human-Computer Interaction class, my group and I Redesigned the Discord app in Figma to create a cleaner, more intuitive, and 
+        accessible interface. we used Norman’s Principles, the Eight Golden Rules, WCAG guidelines, and Gestalt principles to make improvements to the overlay. 
+        The propject process included user research, expert reviews, wireframing, high-fidelity mockups, and an interactive prototype. The final design streamlines navigation, simplifies the layout, 
+        and enhances usability for both new and returning users. This project strengthened my skills in user-centered design, design critique, and Figma prototyping, while demonstrating 
+        how research-driven design decisions can significantly improve user experience for both new and returning users.
+        <p>Note: For the prototype, please press Shift + `(backtick) for the overlay to appear.</p>
+      </p>
+      <div class="buttons">
           <button class="left">
             <a href="https://www.figma.com/design/EFC8vg9lWSfV9cLzvnivvC/P3-Prototype?node-id=0-1&t=zbZCqTomTyQmoze7-1">Figma</a></button>
           <button class="right">
@@ -90,7 +97,7 @@
     <hr class ="projectdiv2">
     <div class="project3">
       <h2>Sephora Figma Redesign & Prototype</h2>
-      <img src="https://images.unsplash.com/photo-1744294724362-3f5c404c771a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8fA%3D%3D">
+      <img src="sephoradesktop.png" height = "550px" width = "auto">
       <p class="projectdesc">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
       <div class="buttons"><!--change description-->
         <button class="left">
