edited more project section

--- a/christinnenguyenn.html
+++ b/christinnenguyenn.html
@@ -80,7 +80,7 @@
       <h2>Discord Figma Redesign</h2>
       <img src="discord.png" height = "550px" width = "auto">
       <p class="projectdesc">
-        For my Human-Computer Interaction class, my group and I Redesigned the Discord app in Figma to create a cleaner, more intuitive, and 
+        For my Human-Computer Interaction class, my group and I redesigned the Discord app in Figma to create a cleaner, more intuitive, and 
         accessible interface. we used Norman’s Principles, the Eight Golden Rules, WCAG guidelines, and Gestalt principles to make improvements to the overlay. 
         The propject process included user research, expert reviews, wireframing, high-fidelity mockups, and an interactive prototype. The final design streamlines navigation, simplifies the layout, 
         and enhances usability for both new and returning users. This project strengthened my skills in user-centered design, design critique, and Figma prototyping, while demonstrating 
@@ -98,7 +98,11 @@
     <div class="project3">
       <h2>Sephora Figma Redesign & Prototype</h2>
       <img src="sephoradesktop.png" height = "550px" width = "auto">
-      <p class="projectdesc">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+      <p class="projectdesc">
+        I created a mobile and desktop redesign of Sephora in Figma to practice basic interactions, controls, and components. I tried focusing on simplifying the app to highlight deals, store locations, 
+        and featured products while reducing clutter and confusing navigation. I wanted to practice creating a simple prototype that would allow users to easily navigate through the app and find what they were looking for.
+        For the desktop version, I aimed to simplify the home page by removing unnecessary sections, emphasizing main categories, and making browsing faster without excessive scrolling.
+      </p>
       <div class="buttons"><!--change description-->
         <button class="left">
           <a href="https://www.figma.com/design/4ZAIk1gCx0jk9h6KQdzI74/design-practice?node-id=0-1&t=aXNJ8Jr4SEGMpcWE-1">Figma</a></button>
