--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <p class="projectdesc">
         I created a mobile and desktop redesign of Sephora in Figma to practice basic interactions, controls, and components. I tried focusing on simplifying the app to highlight deals, store locations, 
         and featured products while reducing clutter and confusing navigation. I wanted to practice creating a simple prototype that would allow users to easily navigate through the app and find what they were looking for.
-        For the desktop version, I aimed to simplify the home page by removing unnecessary sections, emphasizing main categories, and making browsing faster without excessive scrolling.
+        For the desktop version, I aimed to simplify the Sephora home page by removing unnecessary sections, emphasizing main categories, and making browsing faster without excessive scrolling.
       </p>
       <div class="buttons"><!--change description-->
         <button class="left">
