adjusted resizing of images

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <hr class="projectdiv">
     <div class="project1">
       <h2>BVU EDU Website</h2>
-      <img src="bvuedu.png" height = "550px" width = "auto">
+      <img src="bvuedu.png" class="projectimg">
       <p class="projectdesc">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
       <div class="buttons"><!--change description-->
         <button class="left">
@@ -78,7 +78,7 @@
     <hr class = "projectdiv2">
     <div class="project2">
       <h2>Discord Figma Redesign</h2>
-      <img src="discord.png" height = "550px" width = "auto">
+      <img src="discord.png" class="projectimg">
       <p class="projectdesc">
         For my Human-Computer Interaction class, my group and I redesigned the Discord app in Figma to create a cleaner, more intuitive, and 
         accessible interface. we used Norman’s Principles, the Eight Golden Rules, WCAG guidelines, and Gestalt principles to make improvements to the overlay. 
@@ -97,7 +97,7 @@
     <hr class ="projectdiv2">
     <div class="project3">
       <h2>Sephora Figma Redesign & Prototype</h2>
-      <img src="sephoradesktop.png" height = "550px" width = "auto">
+      <img src="sephoradesktop.png" class="projectimg">
       <p class="projectdesc">
         I created a mobile and desktop redesign of Sephora in Figma to practice basic interactions, controls, and components. I tried focusing on simplifying the app to highlight deals, store locations, 
         and featured products while reducing clutter and confusing navigation. I wanted to practice creating a simple prototype that would allow users to easily navigate through the app and find what they were looking for.
