edited spacing for mobile view

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         The propject process included user research, expert reviews, wireframing, high-fidelity mockups, and an interactive prototype. The final design streamlines navigation, simplifies the layout, 
         and enhances usability for both new and returning users. This project strengthened my skills in user-centered design, design critique, and Figma prototyping, while demonstrating 
         how research-driven design decisions can significantly improve user experience for both new and returning users.
-        <p>Note: For the prototype, please press Shift + `(backtick) for the overlay to appear.</p>
+        <p class = "projectdesc">Note: For the prototype, please press Shift + `(backtick) for the overlay to appear.</p>
       </p>
       <div class="buttons">
           <button class="left">
