editing mobile view to have everything aligned

--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
       <hr class = "underline">
       <p>With a background in biology and a strong interest in healthcare, my goal was to make a difference in people’s lives.
         Along the way, I discovered how powerful and innovative technology can be in solving real-world problems more efficiently, 
-        as it led me to pursue software engineering at UCI. 
-        <p>I’m currently focusing on full-stack web development and building tools that are both meaningful and easy to use as I continue my education in this field. I'm proficient in C++, Java, Python, HTML, CSS, 
-        and JavaScript. I have experience using Figma, Git and Github, as I have taken classes related to Data Structures, Human Computer Interaction, and SQL in the upcoming fall quarter at UCI.
+        as it led me to pursue software engineering at UCI. I’m currently focusing on full-stack web development and building tools that are both meaningful and easy to use as I continue my education in this field. 
         <p>I enjoy developing projects and solutions that combine both technical and functional efficiency. I hope to create software that not only meets user needs, but also enhances their experience.
         As I continue with my journey, I’m excited to grow beyond web development and eventually develop innovative software across broader platforms in other areas of both technology and healthcare.</p>
     </div>
@@ -85,8 +83,8 @@
         The propject process included user research, expert reviews, wireframing, high-fidelity mockups, and an interactive prototype. The final design streamlines navigation, simplifies the layout, 
         and enhances usability for both new and returning users. This project strengthened my skills in user-centered design, design critique, and Figma prototyping, while demonstrating 
         how research-driven design decisions can significantly improve user experience for both new and returning users.
-        <p class = "projectdesc">Note: For the prototype, please press Shift + `(backtick) for the overlay to appear.</p>
       </p>
+      <p class = "projectdesc">Note: For the prototype, please press Shift + `(backtick) for the overlay to appear.</p>
       <div class="buttons">
           <button class="left">
             <a href="https://www.figma.com/design/EFC8vg9lWSfV9cLzvnivvC/P3-Prototype?node-id=0-1&t=zbZCqTomTyQmoze7-1">Figma</a></button>
