shortened project descriptions

--- a/index.html
+++ b/index.html
@@ -78,11 +78,9 @@
       <h2>Discord Figma Redesign</h2>
       <img src="discord.png" class="projectimg">
       <p class="projectdesc">
-        For my Human-Computer Interaction class, my group and I redesigned the Discord app in Figma to create a cleaner, more intuitive, and 
-        accessible interface. we used Norman’s Principles, the Eight Golden Rules, WCAG guidelines, and Gestalt principles to make improvements to the overlay. 
-        The propject process included user research, expert reviews, wireframing, high-fidelity mockups, and an interactive prototype. The final design streamlines navigation, simplifies the layout, 
-        and enhances usability for both new and returning users. This project strengthened my skills in user-centered design, design critique, and Figma prototyping, while demonstrating 
-        how research-driven design decisions can significantly improve user experience for both new and returning users.
+        Redesigned Discord overlay in Figma to create a cleaner and accessible interface. Utilized Norman’s Principles, the Eight Golden Rules, 
+        WCAG guidelines, and Gestalt principles. Overall project process included user research, expert reviews, wireframing, high-fidelity mockups, 
+        and an interactive prototype. Final design streamlines navigation, simplifies the layout, and enhances usability for both new and returning users.
       </p>
       <p class = "projectdesc">Note: For the prototype, please press Shift + `(backtick) for the overlay to appear.</p>
       <div class="buttons">
@@ -97,9 +95,8 @@
       <h2>Sephora Figma Redesign & Prototype</h2>
       <img src="sephoradesktop.png" class="projectimg">
       <p class="projectdesc">
-        I created a mobile and desktop redesign of Sephora in Figma to practice basic interactions, controls, and components. I tried focusing on simplifying the app to highlight deals, store locations, 
-        and featured products while reducing clutter and confusing navigation. I wanted to practice creating a simple prototype that would allow users to easily navigate through the app and find what they were looking for.
-        For the desktop version, I aimed to simplify the Sephora home page by removing unnecessary sections, emphasizing main categories, and making browsing faster without excessive scrolling.
+        Created a mobile and desktop redesign of Sephora in Figma. Practiced basic interactions, controls, and components. Focused on highlighting deals, store locations, 
+        and featured products while reducing clutter and confusing navigation. Removed unnecessary sections, emphasized main categories, and made browsing faster without excessive scrolling.
       </p>
       <div class="buttons"><!--change description-->
         <button class="left">
