separated javascript into new file

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
   <div class ="projects" id="myprojects">
     <h1>Projects</h1>
     <hr class="projectdiv">
+    <!--adding drop down menu to select projects to view-->
     <div class="project1">
       <h2>BVU EDU Website</h2>
       <img src="bvuedu.png" class="projectimg">
@@ -123,12 +124,6 @@
     </div>
     <h5>@Created and built by Christine Nguyen</h5>
   </div>
-  <script>
-    const hamburger = document.getElementById('hamburger');
-    const navLinks = document.getElementById('nav-link');
-    hamburger.addEventListener('click', () => {
-    navLinks.classList.toggle('show');
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
