--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     </div>
     <div class="hamburger" id="hamburger">&#9776;</div> 
     <ul class="navigationlink" id="nav-link">
+      <li><span class="close-btn" id="close-btn">✖</span></li>
       <li><a href="#homepage">Home</a></li>
       <li><a href="#aboutme">About</a></li>
       <li><a href="#myprojects">Projects</a></li>
       <li><a href="#contactme">Contact</a></li>
+      
     </ul>
   </div>
   <div class="intro">
@@ -33,7 +35,7 @@
       <hr class = "underline">
       <p>With a background in biology and a strong interest in healthcare, my goal was to make a difference in people’s lives.
         Along the way, I discovered how powerful and innovative technology can be in solving real-world problems more efficiently, 
-        as it led me to pursue software engineering at UCI. I’m currently focusing on full-stack web development and building tools that are both meaningful and easy to use as I continue my education in this field. 
+        as it led me to pursue software engineering at UCI. I’m currently focusing on full-stack web development and building tools that are both meaningful and easy to use as I continue my education in this field. </p>
         <p>I enjoy developing projects and solutions that combine both technical and functional efficiency. I hope to create software that not only meets user needs, but also enhances their experience.
         As I continue with my journey, I’m excited to grow beyond web development and eventually develop innovative software across broader platforms in other areas of both technology and healthcare.</p>
     </div>
@@ -41,21 +43,43 @@
       <h1>Skills</h1>
       <hr class="underline">
       <div class="skillsbody">
-        <div class="frontend">
-          <p>HTML</p>
-          <p>CSS</p>
-          <p>JavaScript</p>
-          <div class="smalltext">Frontend</div>
+        <div class="skill-card" role="button" tabindex="0" aria-expanded="false" aria-label="Frontend card">
+          <div class="card-inner">
+            <div class="card-face front frontend">
+              <p class ="skillstitle">Frontend</p>
+              <div class="smalltext">Click or tap to flip</div>
+            </div>
+            <div class="card-face back frontend-back">
+              <p>HTML</p>
+              <p>CSS</p>
+              <p>JavaScript</p>
+            </div>
+          </div>
         </div>
-        <div class="design">
-          <p>Figma</p>
-          <p>Git</p>
-          <p>Github</p>
-          <div class="smalltext">Version Control and Design</div>
+        <div class="skill-card" role="button" tabindex="0" aria-expanded="false" aria-label="Design card">
+          <div class="card-inner">
+            <div class="card-face front design">
+              <p class ="skillstitle">Version Control and Design</p>
+              <div class="smalltext">Click or tap to flip</div>
+            </div>
+            <div class="card-face back design-back">
+              <p>Figma</p>
+              <p>Git</p>
+              <p>GitHub</p>
+            </div>
+          </div>
         </div>
-        <div class="backend">
-          <p>C++, Java, Python, SQL (Fall 2025)</p>
-          <div class="smalltext">Backend</div>
+        <div class="skill-card" role="button" tabindex="0" aria-expanded="false" aria-label="Backend card">
+          <div class="card-inner">
+            <div class="card-face front backend">
+              <p class ="skillstitle">Backend</p>
+              <div class="smalltext">Click or tap to flip</div>
+            </div>
+            <div class="card-face back backend-back">
+              <p>C++, Java, Python,</p>
+              <p>SQL (Fall 2025)</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -69,8 +93,7 @@
       <img src="bvuedu.png" class="projectimg">
       <p class="projectdesc">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
       <div class="buttons"><!--change description-->
-        <button class="left">
-          <a href="https://www.figma.com/design/EddnQfzcW1mKfXyHKYlK4r/BVU-EDU-PLAN?node-id=0-1&t=6OpqjNbCuaYm3Gq6-1">Figma</a></button>
+          <a class="left" href="https://www.figma.com/design/EddnQfzcW1mKfXyHKYlK4r/BVU-EDU-PLAN?node-id=0-1&t=6OpqjNbCuaYm3Gq6-1">Figma</a>
         <button class="right">Website</button><!--Addlink here-->
       </div>
     </div>
@@ -85,10 +108,8 @@
       </p>
       <p class = "projectdesc">Note: For the prototype, please press Shift + `(backtick) for the overlay to appear.</p>
       <div class="buttons">
-          <button class="left">
-            <a href="https://www.figma.com/design/EFC8vg9lWSfV9cLzvnivvC/P3-Prototype?node-id=0-1&t=zbZCqTomTyQmoze7-1">Figma</a></button>
-          <button class="right">
-            <a href="https://www.figma.com/proto/EFC8vg9lWSfV9cLzvnivvC/P3-Prototype?page-id=0%3A1&node-id=1-11&p=f&viewport=46%2C-176%2C0.54&t=pEIn6Htaf6O8lVje-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A11">Prototype</a></button>
+            <a class="left" href="https://www.figma.com/design/EFC8vg9lWSfV9cLzvnivvC/P3-Prototype?node-id=0-1&t=zbZCqTomTyQmoze7-1">Figma</a>
+            <a class="right" href="https://www.figma.com/proto/EFC8vg9lWSfV9cLzvnivvC/P3-Prototype?page-id=0%3A1&node-id=1-11&p=f&viewport=46%2C-176%2C0.54&t=pEIn6Htaf6O8lVje-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A11">Prototype</a>
       </div>
     </div>
     <hr class ="projectdiv2">
@@ -100,10 +121,8 @@
         and featured products while reducing clutter and confusing navigation. Removed unnecessary sections, emphasized main categories, and made browsing faster without excessive scrolling.
       </p>
       <div class="buttons"><!--change description-->
-        <button class="left">
-          <a href="https://www.figma.com/design/4ZAIk1gCx0jk9h6KQdzI74/design-practice?node-id=0-1&t=aXNJ8Jr4SEGMpcWE-1">Figma</a></button>
-        <button class="right">
-          <a href="https://www.figma.com/proto/4ZAIk1gCx0jk9h6KQdzI74/design-practice?page-id=0%3A1&node-id=2-4&p=f&viewport=321%2C116%2C0.33&t=zysCKvrdjuzX30eO-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=2%3A4">Prototype</a></button>
+          <a class="left" href="https://www.figma.com/design/4ZAIk1gCx0jk9h6KQdzI74/design-practice?node-id=0-1&t=aXNJ8Jr4SEGMpcWE-1">Figma</a>
+          <a class="right" href="https://www.figma.com/proto/4ZAIk1gCx0jk9h6KQdzI74/design-practice?page-id=0%3A1&node-id=2-4&p=f&viewport=321%2C116%2C0.33&t=zysCKvrdjuzX30eO-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=2%3A4">Prototype</a>
       </div>
     </div>
   </div>
