changing BVUEDU project description

--- a/index.html
+++ b/index.html
@@ -91,10 +91,14 @@
     <div class="project1">
       <h2>BVU EDU Website</h2>
       <img src="bvuedu.png" class="projectimg">
-      <p class="projectdesc">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+      <p class="projectdesc">
+        Developed responsive web pages, navigation components, and contact forms for BVU EDU’s tutoring platform. 
+        Improved accessibility and mobile performance through clean, user-friendly layouts. Worked across multiple 
+        pages to ensure design consistency, functionality, and a professional brand presence.
+      </p>
       <div class="buttons"><!--change description-->
           <a class="left" href="https://www.figma.com/design/EddnQfzcW1mKfXyHKYlK4r/BVU-EDU-PLAN?node-id=0-1&t=6OpqjNbCuaYm3Gq6-1">Figma</a>
-        <button class="right">Website</button><!--Addlink here-->
+        <button class="right">Website in progress...</button><!--Addlink here-->
       </div>
     </div>
     <hr class = "projectdiv2">
