making nav close button white

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <h2>BVU EDU Website</h2>
       <img src="bvuedu.png" class="projectimg">
       <p class="projectdesc">
-        Developed responsive web pages, navigation components, and contact forms for BVU EDU’s tutoring platform. 
+        ***Currently in development*** Developed responsive web pages, navigation components, and contact forms for BVU EDU’s tutoring platform. 
         Improved accessibility and mobile performance through clean, user-friendly layouts. Worked across multiple 
         pages to ensure design consistency, functionality, and a professional brand presence.
       </p>
