forcing nav close button to be white on mobile

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="navigation" id="homepage">
     <div class="logo">
-      <img src="logo.png" height="75" width="auto">
+      <img src="logo.png" height="75" width="auto" alt="Logo">
     </div>
     <div class="hamburger" id="hamburger">&#9776;</div> 
     <ul class="navigationlink" id="nav-link">
@@ -22,10 +22,10 @@
     </ul>
   </div>
   <div class="intro">
-    <img src="profile.png" class="profile-pic">
+    <img src="profile.png" class="profile-pic" alt="Profile Picture">
     <div class="introdescription">
       Hi, I'm Christine!
-      <img src="loading.png" class="loading-bar">
+      <img src="loading.png" class="loading-bar" alt="Loading Bar">
     </div>
   </div>
   <hr class = "divider">
@@ -124,7 +124,7 @@
         Created a mobile and desktop redesign of Sephora in Figma. Practiced basic interactions, controls, and components. Focused on highlighting deals, store locations, 
         and featured products while reducing clutter and confusing navigation. Removed unnecessary sections, emphasized main categories, and made browsing faster without excessive scrolling.
       </p>
-      <div class="buttons"><!--change description-->
+      <div class="buttons">
           <a class="left" href="https://www.figma.com/design/4ZAIk1gCx0jk9h6KQdzI74/design-practice?node-id=0-1&t=aXNJ8Jr4SEGMpcWE-1">Figma</a>
           <a class="right" href="https://www.figma.com/proto/4ZAIk1gCx0jk9h6KQdzI74/design-practice?page-id=0%3A1&node-id=2-4&p=f&viewport=321%2C116%2C0.33&t=zysCKvrdjuzX30eO-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=2%3A4">Prototype</a>
       </div>
