checking close button in mobile view

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <div class="hamburger" id="hamburger">&#9776;</div> 
     <ul class="navigationlink" id="nav-link">
-      <li><span class="close-btn" id="close-btn">✖</span></li>
+      <li><button type="button" class="close-btn" id="close-btn" aria-label="Close menu">X</button></li>
       <li><a href="#homepage">Home</a></li>
       <li><a href="#aboutme">About</a></li>
       <li><a href="#myprojects">Projects</a></li>
