--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
               <div class="smalltext">Click or tap to flip</div>
             </div>
             <div class="card-face back design-back">
+              <p>Git, GitHub</p>
               <p>Figma</p>
-              <p>Git</p>
-              <p>GitHub</p>
+              <p>UI/UX Design</p>
             </div>
           </div>
         </div>
@@ -136,8 +136,10 @@
     <div class="photos">
       <a href="mailto:christine.nguyen0909@gmail.com">
         <img src="mail.png" height="75" width="auto">
-      </a><!--add resume pdf-->
-      <img src="resume.png" height="75" width="auto">
+      </a>
+      <a href="https://drive.google.com/file/d/1ODFqfM9EMUmMR4_9pUuRp84HSnk4i44_/view?usp=sharing">
+        <img src="resume.png" height="75" width="auto">
+      </a>
       <a href="https://www.linkedin.com/in/christinne-nguyenn/">
         <img src="linkedin.png" height="75" width="auto">
       </a>
