editing about description

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
       <hr class = "underline">
       <p>With a background in biology and a strong interest in healthcare, my goal was to make a difference in people’s lives.
         Along the way, I discovered how powerful and innovative technology can be in solving real-world problems more efficiently, 
-        as it led me to pursue software engineering at UCI. I’m currently focusing on full-stack web development and building tools that are both meaningful and easy to use as I continue my education in this field. </p>
+        as it led me to pursue software engineering at UCI. I’m currently learning full-stack web development through the OdinProject and building tools 
+        that are both meaningful and easy to use as I continue my education in this field. </p>
         <p>I enjoy developing projects and solutions that combine both technical and functional efficiency. I hope to create software that not only meets user needs, but also enhances their experience.
         As I continue with my journey, I’m excited to grow beyond web development and eventually develop innovative software across broader platforms in other areas of both technology and healthcare.</p>
     </div>
