--- a/index.html
+++ b/index.html
@@ -117,6 +117,21 @@
             <a class="right" href="https://www.figma.com/proto/EFC8vg9lWSfV9cLzvnivvC/P3-Prototype?page-id=0%3A1&node-id=1-11&p=f&viewport=46%2C-176%2C0.54&t=pEIn6Htaf6O8lVje-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A11">Prototype</a>
       </div>
     </div>
+    <hr class = "projectdiv2">
+    <div class="project2">
+      <h2>Discord Figma Redesign</h2>
+      <img src="discord.png" class="projectimg">
+      <p class="projectdesc">
+        Redesigned Discord overlay in Figma to create a cleaner and accessible interface. Utilized Norman’s Principles, the Eight Golden Rules, 
+        WCAG guidelines, and Gestalt principles. Overall project process included user research, expert reviews, wireframing, high-fidelity mockups, 
+        and an interactive prototype. Final design streamlines navigation, simplifies the layout, and enhances usability for both new and returning users.
+      </p>
+      <p class = "projectdesc">Note: For the prototype, please press Shift + `(backtick) for the overlay to appear.</p>
+      <div class="buttons">
+            <a class="left" href="https://www.figma.com/design/EFC8vg9lWSfV9cLzvnivvC/P3-Prototype?node-id=0-1&t=zbZCqTomTyQmoze7-1">Figma</a>
+            <a class="right" href="https://www.figma.com/proto/EFC8vg9lWSfV9cLzvnivvC/P3-Prototype?page-id=0%3A1&node-id=1-11&p=f&viewport=46%2C-176%2C0.54&t=pEIn6Htaf6O8lVje-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A11">Prototype</a>
+      </div>
+    </div>
     <hr class ="projectdiv2">
     <div class="project3">
       <h2>Sephora Figma Redesign & Prototype</h2>
