adding description and screenshot of rps game

--- a/index.html
+++ b/index.html
@@ -104,17 +104,16 @@
     </div>
     <hr class = "projectdiv2">
     <div class="project2">
-      <h2>Discord Figma Redesign</h2>
-      <img src="discord.png" class="projectimg">
+      <h2>Rock, Paper, Scissors</h2>
+      <img src="rps.png" class="projectimg">
       <p class="projectdesc">
-        Redesigned Discord overlay in Figma to create a cleaner and accessible interface. Utilized Norman’s Principles, the Eight Golden Rules, 
-        WCAG guidelines, and Gestalt principles. Overall project process included user research, expert reviews, wireframing, high-fidelity mockups, 
-        and an interactive prototype. Final design streamlines navigation, simplifies the layout, and enhances usability for both new and returning users.
+        Developed a Rock, Paper, Scissors game using HTML and JavaScript through the OdinProject guidelines. Added CSS styles to personalize the design and layout.
+        Implemented interactive features such as score tracking, reset functionality, and dynamic UI updates. 
+        Focused on creating a responsive design that works across various devices and screen sizes.
       </p>
-      <p class = "projectdesc">Note: For the prototype, please press Shift + `(backtick) for the overlay to appear.</p>
       <div class="buttons">
-            <a class="left" href="https://www.figma.com/design/EFC8vg9lWSfV9cLzvnivvC/P3-Prototype?node-id=0-1&t=zbZCqTomTyQmoze7-1">Figma</a>
-            <a class="right" href="https://www.figma.com/proto/EFC8vg9lWSfV9cLzvnivvC/P3-Prototype?page-id=0%3A1&node-id=1-11&p=f&viewport=46%2C-176%2C0.54&t=pEIn6Htaf6O8lVje-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A11">Prototype</a>
+            <a class="left" href="https://github.com/christinne-n/rockpaperscissors">GitHub</a>
+            <a class="right" href="https://christinne-n.github.io/rockpaperscissors/">Game Demo</a>
       </div>
     </div>
     <hr class = "projectdiv2">
