fixing minor details in descriptions and code

--- a/index.html
+++ b/index.html
@@ -104,16 +104,16 @@
     </div>
     <hr class = "projectdiv2">
     <div class="project2">
-      <h2>Rock, Paper, Scissors</h2>
+      <h2>Rock, Paper, Scissors Game</h2>
       <img src="rps.png" class="projectimg">
       <p class="projectdesc">
-        Developed a Rock, Paper, Scissors game using HTML and JavaScript through the OdinProject guidelines. Added CSS styles to personalize the design and layout.
+        Developed a Rock, Paper, Scissors game using HTML and JavaScript through the OdinProject guidelines. Added CSS styles to personalize design and layout.
         Implemented interactive features such as score tracking, reset functionality, and dynamic UI updates. 
         Focused on creating a responsive design that works across various devices and screen sizes.
       </p>
       <div class="buttons">
             <a class="left" href="https://github.com/christinne-n/rockpaperscissors">GitHub</a>
-            <a class="right" href="https://christinne-n.github.io/rockpaperscissors/">Game Demo</a>
+            <a class="right" href="https://christinne-n.github.io/rockpaperscissors/">Game</a>
       </div>
     </div>
     <hr class = "projectdiv2">
@@ -121,9 +121,9 @@
       <h2>Discord Figma Redesign</h2>
       <img src="discord.png" class="projectimg">
       <p class="projectdesc">
-        Redesigned Discord overlay in Figma to create a cleaner and accessible interface. Utilized Norman’s Principles, the Eight Golden Rules, 
+        Redesigned Discord overlay in Figma to create a cleaner and accessible interface through class project. Utilized Norman’s Principles, the Eight Golden Rules, 
         WCAG guidelines, and Gestalt principles. Overall project process included user research, expert reviews, wireframing, high-fidelity mockups, 
-        and an interactive prototype. Final design streamlines navigation, simplifies the layout, and enhances usability for both new and returning users.
+        and an interactive prototype. Final design streamlines navigation, simplifies layout, and enhances usability for both new and returning users.
       </p>
       <p class = "projectdesc">Note: For the prototype, please press Shift + `(backtick) for the overlay to appear.</p>
       <div class="buttons">
@@ -136,7 +136,7 @@
       <h2>Sephora Figma Redesign & Prototype</h2>
       <img src="sephoradesktop.png" class="projectimg">
       <p class="projectdesc">
-        Created a mobile and desktop redesign of Sephora in Figma. Practiced basic interactions, controls, and components. Focused on highlighting deals, store locations, 
+        Created a mobile and desktop redesign of Sephora in Figma for personal learning. Practiced basic interactions, controls, and components. Focused on highlighting deals, store locations, 
         and featured products while reducing clutter and confusing navigation. Removed unnecessary sections, emphasized main categories, and made browsing faster without excessive scrolling.
       </p>
       <div class="buttons">
