adding bvuedu website and description under contact

--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
       <h2>BVU EDU Website</h2>
       <img src="bvuedu.png" class="projectimg">
       <p class="projectdesc">
-        ***Currently in development*** Developed responsive web pages, navigation components, and contact forms for BVU EDU’s tutoring platform. 
+        Developed responsive web pages, navigation components, and contact forms for BVU EDU’s tutoring platform. 
         Improved accessibility and mobile performance through clean, user-friendly layouts. Worked across multiple 
         pages to ensure design consistency, functionality, and a professional brand presence.
       </p>
-      <div class="buttons"><!--change description-->
+      <div class="buttons">
           <a class="left" href="https://www.figma.com/design/EddnQfzcW1mKfXyHKYlK4r/BVU-EDU-PLAN?node-id=0-1&t=6OpqjNbCuaYm3Gq6-1">Figma</a>
-        <button class="right">Website in progress...</button><!--Addlink here-->
+          <a class="right" href="https://bvuedu.com/">Website</a>
       </div>
     </div>
     <hr class = "projectdiv2">
@@ -151,15 +151,19 @@
     <div class="photos">
       <a href="mailto:christine.nguyen0909@gmail.com">
         <img src="mail.png" height="75" width="auto">
+        <p class ="contactdesc">Email</p>
       </a>
       <a href="https://drive.google.com/file/d/1ODFqfM9EMUmMR4_9pUuRp84HSnk4i44_/view?usp=sharing">
         <img src="resume.png" height="75" width="auto">
+        <p class ="contactdesc">Resume</p>
       </a>
       <a href="https://www.linkedin.com/in/christinne-nguyenn/">
         <img src="linkedin.png" height="75" width="auto">
+        <p class ="contactdesc">LinkedIn</p>
       </a>
       <a href ="https://github.com/christinne-n">
         <img src="github.png" height="75" width="auto">
+        <p class ="contactdesc">GitHub</p>
       </a>
     </div>
     <h5>@Created and built by Christine Nguyen</h5>
