adding another frameworks and libraries to skills

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
             <div class="card-face back design-back">
               <p>Git, GitHub</p>
-              <p>Figma</p>
+              <p>Figma, WCAG 2.2</p>
               <p>UI/UX Design</p>
             </div>
           </div>
@@ -79,6 +79,18 @@
             <div class="card-face back backend-back">
               <p>C++, Java, Python,</p>
               <p>SQL (Fall 2025)</p>
+            </div>
+          </div>
+        </div>
+        <div class="skill-card" role="button" tabindex="0" aria-expanded="false" aria-label="Frontend card">
+          <div class="card-inner">
+            <div class="card-face front framework">
+              <p class ="skillstitle">Frameworks & Libraries</p>
+              <div class="smalltext">Click or tap to flip</div>
+            </div>
+            <div class="card-face back framework-back">
+              <p>React.js (familiar)</p>
+              <p>Node.js (familiar)</p>
             </div>
           </div>
         </div>
