adding profile picture to main page and fixing extra gap in mobile

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </ul>
   </div>
   <div class="intro">
-    <img src="profile.png" class="profile-pic" alt="Profile Picture">
+    <img src="me.png" class="profile-pic" alt="Profile Picture">
     <div class="introdescription">
       Hi, I'm Christine!
       <img src="loading.png" class="loading-bar" alt="Loading Bar">
