fixing image scaling and sizing as well as font size

--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
         Along the way, I discovered how powerful and innovative technology can be in solving real-world problems more efficiently, 
         as it led me to pursue software engineering at UCI. I’m currently learning full-stack web development through the OdinProject and building tools 
         that are both meaningful and easy to use as I continue my education in this field. </p>
+        <p>My experience as a STEAM instructor and in healthcare strengthened my ability to adapt in fast-paced environments, communicate clearly and 
+        collaborate well with diverse teams. These roles have taught me the importance of empathy in both technology and teamwork, and I strive to bring that 
+        same mindset to every project I take on.</p>
         <p>I enjoy developing projects and solutions that combine both technical and functional efficiency. I hope to create software that not only meets user needs, but also enhances their experience.
-        As I continue with my journey, I’m excited to grow beyond web development and eventually develop innovative software across broader platforms in other areas of both technology and healthcare.</p>
+        As I continue with my journey, I’m excited to grow beyond web development and eventually develop innovative software across broader platforms.</p>
     </div>
     <div class="skills">
       <h1>Skills</h1>
@@ -77,8 +80,8 @@
               <div class="smalltext">Click or tap to flip</div>
             </div>
             <div class="card-face back backend-back">
-              <p>C++, Java, Python,</p>
-              <p>SQL (Fall 2025)</p>
+              <p>C++, Java</p>
+              <p>Python, SQL</p>
             </div>
           </div>
         </div>
@@ -89,8 +92,8 @@
               <div class="smalltext">Click or tap to flip</div>
             </div>
             <div class="card-face back framework-back">
-              <p>React.js (familiar)</p>
-              <p>Node.js (familiar)</p>
+              <p>React.js</p>
+              <p>Node.js</p>
             </div>
           </div>
         </div>
