adding more skills

--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
         <div class="skill-card" role="button" tabindex="0" aria-expanded="false" aria-label="Design card">
           <div class="card-inner">
             <div class="card-face front design">
-              <p class ="skillstitle">Version Control and Design</p>
+              <p class ="skillstitle">Tool & Technologies</p>
               <div class="smalltext">Click or tap to flip</div>
             </div>
             <div class="card-face back design-back">
-              <p>Git, GitHub</p>
-              <p>Figma, WCAG 2.2</p>
+              <p>Git, GitHub, UNIX</p>
+              <p>Figma, WCAG, Vite</p>
               <p>UI/UX Design</p>
             </div>
           </div>
@@ -80,7 +80,7 @@
               <div class="smalltext">Click or tap to flip</div>
             </div>
             <div class="card-face back backend-back">
-              <p>C++, Java</p>
+              <p>C/C++, Java</p>
               <p>Python, SQL</p>
             </div>
           </div>
@@ -94,6 +94,7 @@
             <div class="card-face back framework-back">
               <p>React.js</p>
               <p>Node.js</p>
+              <p>Tailwind CSS</p>
             </div>
           </div>
         </div>
